--- a/vignettes/Sex_metanalysis_vignette.Rmd
+++ b/vignettes/Sex_metanalysis_vignette.Rmd
@@ -1,10 +1,10 @@
 ---
-title: "Meta-analysis of sex-related microbial species using cMD3.0"
+title: "Meta-analysis of sex-related microbial species using cMD 3"
 author: 
   - name: Davide Golzato, Paolo Manghi
     affiliation:
-    - Università degli studi di Trento
-    email: davide.golzato@unitn.it
+    - Università degli Studi di Trento
+    email: davide.golzato@unitn.it, paolo.manghi@unitn.it
 output: 
   BiocStyle::html_document:
     self_contained: yes
@@ -46,80 +46,17 @@ knitr::opts_chunk$set(
 ```
 
 
-```{r vignetteSetup, echo=FALSE, message=FALSE, warning = FALSE}
-## Track time spent on making the vignette
-startTime <- Sys.time()
-
-## Bib setup
-library("RefManageR")
-
-## Write bibliography information
-bib <- c(
-    R = citation(),
-    BiocStyle = citation("BiocStyle")[1],
-    knitr = citation("knitr")[1],
-    RefManageR = citation("RefManageR")[1],
-    rmarkdown = citation("rmarkdown")[1],
-    sessioninfo = citation("sessioninfo")[1],
-    testthat = citation("testthat")[1],
-    curatedMetagenomicData = citation("curatedMetagenomicData")[1]
-)
-```
-
-# Basics
-
-## Install `curatedMetagenomicData`
-
-`R` is an open-source statistical environment which can be easily modified to enhance its functionality via packages. `r Biocpkg("curatedMetagenomicData")` is a `R` package available via the [Bioconductor](http://bioconductor.org) repository for packages. `R` can be installed on any operating system from [CRAN](https://cran.r-project.org/) after which you can install `r Biocpkg("curatedMetagenomicData")` by using the following commands in your `R` session:
-
-```{r "install", eval = FALSE}
-if (!requireNamespace("BiocManager", quietly = TRUE)) {
-      install.packages("BiocManager")
-  }
-
-BiocManager::install("curatedMetagenomicData")
-
-## Check that you have a valid Bioconductor installation
-BiocManager::valid()
-```
-
-## Required knowledge
-
-`r Biocpkg("curatedMetagenomicData")` is based on many other packages and in particular in those that have implemented the infrastructure needed for dealing with RNA-seq data. That is, packages like `r Biocpkg("SummarizedExperiment")`.
-
-If you are asking yourself the question "Where do I start using Bioconductor?" you might be interested in [this blog post](http://lcolladotor.github.io/2014/10/16/startbioc/#.VkOKbq6rRuU).
-
-## Asking for help
-
-As package developers, we try to explain clearly how to use our packages and in which order to use the functions. But `R` and `Bioconductor` have a steep learning curve so it is critical to learn where to ask for help. The blog post quoted above mentions some but we would like to highlight the [Bioconductor support site](https://support.bioconductor.org/) as the main resource for getting help: remember to use the `curatedMetagenomicData` tag and check [the older posts](https://support.bioconductor.org/t/curatedMetagenomicData/). Other alternatives are available such as creating GitHub issues and tweeting. However, please note that if you want to receive help you should adhere to the [posting guidelines](http://www.bioconductor.org/help/support/posting-guide/). It is particularly critical that you provide a small reproducible example and your session information so package developers can track down the source of the error.
-
-## Citing `curatedMetagenomicData`
-
-We hope that `r Biocpkg("curatedMetagenomicData")` will be useful for your research. Please use the following information to cite the package and the overall approach. Thank you!
-
-```{r "citation"}
-## Citation info
-citation("curatedMetagenomicData")
-```
-
-# Quick start to using to `curatedMetagenomicData`
-
-```{r "start", message=FALSE}
-library("curatedMetagenomicData")
-```
-
-
-
-## Meta-analysis of sex-related microbial species using data from curatedMetagenomicData
+# Meta-analysis of sex-related microbial species using data from curatedMetagenomicData
 
 ```{r, message=FALSE}
+library(curatedMetagenomicData)
 library(tidyverse)
 library(SummarizedExperiment)
+library(TreeSummarizedExperiment)
 ```
 
 
-
-### Retrieval of datasets from the cMD3.0 meeting a series of requirements
+## Retrieval of datasets from the cMD3 meeting a series of requirements
 ```{r}
 #Filter on Age, body_site, study_condition and remove samples missing BMI
 metadata <- curatedMetagenomicData::sampleMetadata %>% 
@@ -131,108 +68,90 @@ metadata <- curatedMetagenomicData::sampleMetadata %>%
            days_from_first_collection %in% c(0,NA))
 
 metadata <- metadata %>% 
-  group_by(subjectID) %>% 
+  group_by(study_name, subject_id) %>% 
   filter(row_number() == 1) %>% 
   ungroup()
 
   
 #Apply function to grouped selected dataset
 datasets_tokeep <- metadata %>%
-    select(studyName, gender) %>%
-    group_by(studyName) %>% 
-    summarise(M = sum(gender=="male"), 
-              F= sum(gender=="female"), 
+    select(study_name, gender) %>%
+    group_by(study_name) %>% 
+    summarise(n_males = sum(gender=="male"), 
+              n_females= sum(gender=="female"), 
               N=n()) %>%  
-    mutate(keep = (pmin(M,F) >= 40) & (F/N >= 0.25) & (M/N >= 0.25)) %>% 
+    mutate(keep = (pmin(n_males,n_females) >= 40) & (n_females/N >= 0.25) & (n_males/N >= 0.25)) %>% 
     filter(keep == TRUE)
 
-datasets_tokeep <- datasets_tokeep$studyName
+datasets_tokeep <- datasets_tokeep$study_name
   
 metadata <- metadata %>% 
-    filter(studyName %in% datasets_tokeep)
+    filter(study_name %in% datasets_tokeep)
 
 ```
 
 
-### Download of datasets and data wrangling to structure them in a format suitable for this meta-analysis
+## Download of datasets and data wrangling to structure them in a format suitable for this meta-analysis
 
-```{r, message=FALSE}
+Now that we have filtered the metadata, we apply the cMD function “returnSamples()”.
+This function allows us to obtain a TreeSummarizedExperiment object, in which is stored the specified data-type (in this example: relative abundances of species) for the samples for which we have selected the metadata.
 
-#Retrieve bug list for each of the selected datasets
-bugs_stool <- paste0(datasets_tokeep,".relative_abundance")
+Before proceeding, we further split the datasets by country: in this analysis, only the AsnicarF_2021 dataset encompasses samples from 2 countries, so we divide it into GBR- and USA-samples (by renaming these last: USA_asnicar_2021).
 
-se_list <- lapply(bugs_stool, FUN = function(x){
-  curatedMetagenomicData(x, dryrun = FALSE)
-  })
 
-names(se_list) <- datasets_tokeep
+```{r message=FALSE}
+#Retrieve queried samples
+tse <- curatedMetagenomicData::returnSamples(metadata, dataType = "relative_abundance")
 
-subset_level <- function(dataframe, taxon_level){
-  #Take the row names of the dataframe
-  taxon_ids <- c(kingdom="k__",
-                 phylum="p__", 
-                 class="c__", 
-                 order="o__", 
-                 family="f__", 
-                 genus="g__",
-                 species="s__",
-                 strain="t__")
+#Separating Asnicar USA from Asnicar GBR
+colData(tse)[which(colData(tse)$study_name == "AsnicarF_2021" & colData(tse)$country == "USA"),]$study_name <- "USA_asnicarF_2021"
+```
+
+The TreeSummarizedExperiment object of taxonomic relative abundances stores the entire taxonomy (from Kingdom to species-level) of each microbial species. 
+We therefore define a function which allows us to select **higher** taxonomic level (even though we select the species-level in this example).
+
+This function, besides, trims the taxonomic-entry-name (this is done for purely readability purposes).
+
+```{r message=FALSE}
+#Aggregate relative abundances at the desired taxonomic level
+AggregateByTaxon <- function(tse_object, taxon){
   
-  level_pattern <- paste0(taxon_ids[taxon_level][[1]],"(?!.*\\|)")
+  #Change rowTree from phylogenetic tree to taxonomic tree
+  taxa <- rowData(tse_object)
+  taxa_tree <- toTree(data = taxa)
   
-  #Grep those referring to the selected level (species,phylum,family...)
-  level_indexes <- grep(level_pattern, rownames(dataframe), perl=TRUE)
+  taxa_tse <- changeTree(x = tse_object, 
+                         rowTree = taxa_tree, 
+                         rowNodeLab = taxa[["species"]])
   
-  #Select rows
-  level_dataframe <- dataframe[level_indexes,]
-  rownames(level_dataframe) <- str_replace(rownames(level_dataframe), 
-                                           paste0(".*\\|(",
-                                                  taxon_ids[taxon_level][[1]],
-                                                  ".*)"),"\\1")
-  return(level_dataframe)
+  rownames(taxa_tse) <- paste0("species:",rowLinks(taxa_tse)$nodeLab)
+  
+  if(taxon == "species"){
+    
+    return(taxa_tse) # No need to aggregate at species level
+    
+} else {
+    
+    taxa <- c(taxa_tree$tip.label, taxa_tree$node.label)
+    taxa_level <- taxa[startsWith(taxa, paste0(taxon,":"))]
+    
+    agg_taxa <- aggTSE(x = taxa_tse, rowLevel = taxa_level, rowFun = function(x) sum(x, na.rm = TRUE))
+    agg_taxa <- changeTree(x=agg_taxa, rowTree = rowTree(agg_taxa), rowNodeLab = taxa_level )
+    rownames(agg_taxa) <- rowLinks(agg_taxa)$nodeLab
+  
+    return(agg_taxa)
+  }
 }
-  
-
-relabsList <- lapply(se_list, FUN = function(x){
-  se_exprs <- assay(x)
-  se_exprs_filtered <- se_exprs[,which(colnames(se_exprs) %in% metadata$sampleID)]
-  se_exprs_filtered <- subset_level(se_exprs_filtered, "species")
-
-  return(as.data.frame(se_exprs_filtered))
-})
-
-metaList <- split(metadata,metadata$studyName)
-metaList <- lapply(metaList, function(x) {
-    x <- t(x)
-    colnames(x) <- x["sampleID",]
-    x <- x[c("BMI","age","gender"),]
-    return(as.data.frame(x))
-  })
-
-
-#Dividing AsnicarF_2021 samples into two separated datasets, according to 
-#country of origin: AsnicarF_2021 for GBR samples and USA_AsnicarF_2021 for
-#USA samples
-
-#Retrieve sample names of USA samples from AsnicarF_2021
-USA_AsnicarF_2021_samples <- metadata[which(metadata$studyName == "AsnicarF_2021" 
-                                            & metadata$country == "USA"),]$sampleID
-
-#Pick species relative abundance profiles from AsnicarF_2021 and place them in a
-#separate dataset ("USA_AsnicarF_2021") 
-relabsList$USA_AsnicarF_2021 <- relabsList$AsnicarF_2021[,USA_AsnicarF_2021_samples] 
-metaList$USA_AsnicarF_2021 <- metaList$AsnicarF_2021[,USA_AsnicarF_2021_samples]
-
-#Remove the USA samples from the original AsnicarF_2021 dataset, so to have only
-#"GBR" samples here
-relabsList$AsnicarF_2021 <-relabsList$AsnicarF_2021[,!names(relabsList$AsnicarF_2021) %in% USA_AsnicarF_2021_samples]
-metaList$AsnicarF_2021 <-metaList$AsnicarF_2021[,!names(metaList$AsnicarF_2021) %in% USA_AsnicarF_2021_samples]
-
 ```
 
-## Analysis of microbial species by a linear model and computation of an effect size for each species in each dataset
+We are interested in species only, so we modify the TSE object accordingly
+```{r message=FALSE}
+species_tse <- AggregateByTaxon(tse, "species")
+```
 
-### Defining functions used to perform the meta-analysis
+# Single-dataset sex-related microbial species differential-abundance-analyses, via a linear modelling controlling for age & BMI
+
+## Defining functions used to perform the analysis
 These functions will be used to compute the standardized difference (d) from the t-value of linear models, the respective Standard Error ($SE_d$)
 and transform relative abundance data.
 
@@ -249,7 +168,7 @@ SE_d <- function(n1,n2,d) {
 }
 ```
 
-This function is used to transform species relative abundances according to the $arcsin(\sqrt{\frac{RelAb}{100}})$ function to correct for compositionality-related issues
+We define another function to transform the data with the $arcsin(\sqrt{\frac{RelAb}{100}})$ of the corresponding proportions.
 ```{r}
 #Transform relative abundances
 asin_trans <- function(rel_ab){
@@ -257,15 +176,16 @@ asin_trans <- function(rel_ab){
 }
 ```
 
-Then we defined a function operating on the single dataset: In order to correct out meta-analysis on sex by age & BMI, we use an OLS model containing the main and accessory predictors (in which the microbial species transformed abundance is the response) and we extract the effect size for sex from its beta:
+In order to proceed with the meta-analysis, we have to compute an effect-size for each population.
+Each dataset effect-size is computed with the function we define after. This function estimates a per-feature relationship between the sex (encoded here as a binary variable) and the arcsin-square-root relative abundance of each species. The estimates is extracted by an Ordinary Least Squares (OLS) model, in which the microbial feature (in this case, the species) is the response, and the sex is the predictor. Using this method we can control our model by age & by BMI of the patient. 
 
-Indeed, from a linear model of the type:
+The model has indeed the shape:
+
 $$ species \sim  1 + sex + age + BMI$$
 
 
 
-We compute the effect-size of "sex" with respect to "species" (corrected for "age" & "BMI") via the formula:
-
+Weighted effect-size of sex in this model is computed as:
 
 $$\text{effect-size} = \frac{t\cdot (n1+n2)}{\sqrt{n1\cdot n2}\cdot \sqrt{df}}$$
 
@@ -280,84 +200,98 @@ The so computed Effect-size (corrected by covariates) has Standard Error and Var
 
 $$SE =\sqrt{\frac{n1+n2-1}{n1+n2-3}\cdot\frac{4}{n1+n2}\cdot(1+\frac{\text{effect-size}^2}{8})}$$
 
-According to our choice of correcting each single effect included in the meta-analysis by 2 covariates, the easiest way to compute the Random-Effect model is to use the function Metagen, passing to it the precomputed Std.Errors and E.Sizes
+```{r message=FALSE}
+#Function that takes in input a tse object and for each dataset computes a linear model for each linear species
+computeStandardizedMeanDifference <- function(tse_object){
+  
+  tse_datasets <- unique(colData(tse_object)$study_name)
+  
+  #Build linear models for all species of each dataset present in tse_object
+  singleDatasetAnalyze <- function(dataset) {
+    
+    single_dataset_tse <- tse_object[,tse_object$study_name == dataset]
 
-```{r}
-#Main analysis function on single dataset
-single_dataset_analyze <- function(exprs_df, meta_df,dataset_name){
-  
-  #Tidy dataframe of species relative abundances (Species abundances on columns)
-    #Transform relative abundances with arcsin transformation
-  exprs_df <- as.data.frame(t(exprs_df))
-  exprs_df <- exprs_df %>% 
-    mutate_if(is.character,as.numeric) %>% 
-    mutate_all(asin_trans)
-  
-  #Tidy dataframe with metadata of samples
-    #Change datatype of metadata
-  
-  meta_df <- as.data.frame(t(meta_df))
-  meta_df <- meta_df %>% mutate(age = as.numeric(age), 
-                                BMI=as.numeric(BMI), 
-                                gender=as.factor(gender))
+    #Select vectors of relative abundances and metadata
+    exprs_df <- asin_trans(
+      assay(single_dataset_tse))
+    
+    exprs_df <- exprs_df[rowSums(is.na(exprs_df)) != ncol(exprs_df), ]
 
-  meta_df <- meta_df[match(rownames(exprs_df),rownames(meta_df)),]
-  
-  #OLS regression of Relative abundance of each species vs BMI, age and gender.
-  #t-value for "gender" variable has been extracted and used to compute the 
-  #random effect size (d) and the respective standard error
-  
-  lmResults <- t(apply(exprs_df,
-                       MARGIN = 2, 
-                       FUN = function(x) 
-                         coef(
-                           summary(
-                             lm(x ~ meta_df$BMI + meta_df$age + meta_df$gender +1)))[c('meta_df$gendermale'),c('t value','Pr(>|t|)')]))
-  
-  #Retrieve sample size of the two groups ("male" and "female")
-  n_gender <- c(table(meta_df$gender)["male"][[1]],
-                table(meta_df$gender)["female"][[1]])
-  
-  #Compute effect size and respective standard error for each species in single
-  #dataset
-  d_List <- as.vector(sapply(lmResults[,1], function(x) d_fromlm(n_gender[1],
-                                                                 n_gender[2], 
-                                                                 x)))
-  
-  SE_d_List <- as.vector(sapply(d_List, function(x) SE_d(n_gender[1],
-                                                         n_gender[2],
-                                                         x )))
-  
-  #Wal test for relative abundance of species between males and females
-  female_idx <- which(meta_df$gender == "female") 
-  male_idx <- which(meta_df$gender == "male")
-  wald_list <- as.vector(lmResults[,2])
-  
-  #FDR-correction with Benjamini-Hochberg method for Wal p-values
-  final_df <- as.data.frame(cbind(d_List,
-                                  SE_d_List,
-                                  wald_list,
-                                  p.adjust(wald_list,method = "BH")))
-  
-  #Finalize results for the single dataset
-  colnames(final_df) <- c(paste0(dataset_name,"_CohenD"),
-                          paste0(dataset_name,"_SE_D"),
-                          paste0(dataset_name,"_pvalue"),
-                          paste0(dataset_name,"_Qvalue"))
-  rownames(final_df) <- colnames(exprs_df)
-  
-  return(final_df)
-}
+    species <- rownames(exprs_df)
+    
+    age <- as.double(colData(single_dataset_tse)$age)
+    bmi <- as.double(colData(single_dataset_tse)$BMI)
+    gender <- as.factor(colData(single_dataset_tse)$gender)
+    
+    compute_lm <- function(exprs_row){
+      lm_res <-  broom::tidy(lm(exprs_row ~ bmi + age + gender))
+      lm_res <- column_to_rownames(lm_res, var = "term")
+      res <- lm_res["gendermale",c("statistic","p.value"),drop=TRUE]
+      return(res)
+    }
 
+    lmResults <- t(
+      sapply(species, 
+            FUN = function(x) {
+              species_relabs <- exprs_df[x,] 
+              res <- compute_lm(species_relabs)
+              return(res)
+                        }))
+
+    n_gender <- c(table(gender)["male"][[1]],
+                  table(gender)["female"][[1]])
+    
+    #Compute effect size and respective standard error for each species
+    #in single dataset
+    
+    d_List <- as.vector(sapply(lmResults[,"statistic"], function(x) d_fromlm(n_gender[1],
+                                                                   n_gender[2], 
+                                                                   x)))
+    
+    SE_d_List <- as.vector(sapply(d_List, function(x) SE_d(n_gender[1],
+                                                           n_gender[2],
+                                                           x )))
+    
+    #Wald test for relative abundance of species between males and females
+    #(default of lm() function)
+    wald_list <- as.double(lmResults[,"p.value", drop=TRUE])
+    
+    #FDR-correction with Benjamini-Hochberg method for Wald p-values
+    q_values <- p.adjust(wald_list,method = "BH")
+    
+    
+    final_df <- as.matrix(cbind(d_List,
+                                SE_d_List,
+                                wald_list,
+                                q_values))
+    
+    #Finalize results for the single dataset
+    colnames(final_df) <- c(paste0(dataset,"_CohenD"),
+                            paste0(dataset,"_SE_d"),
+                            paste0(dataset,"_pvalue"),
+                            paste0(dataset,"_Qvalue"))
+    
+    rownames(final_df) <- species
+
+    return(final_df)
+  
+  }
+  
+    linear_models <- lapply(tse_datasets, singleDatasetAnalyze)
+    names(linear_models) <- tse_datasets
+    
+    return(linear_models)
+
+} 
 ```
 
-This function uses the function "metagen" from package "meta" to perform the metanalysis
+Now that we have computed effect-sizes for each population, we can meta-analyze each microbial feature. In order to do this, we define a function applying the “metagen” function from the package “metafor”.
 ```{r}
 runMetaanalysis <- function(d_vector, SE_d_vector) {
   a <- meta::metagen(TE=d_vector,
                      seTE=SE_d_vector,
                      studlab=rownames(d_vector),
-                     method.tau="PM",
+                     method.tau="PM",          
                      sm="SMD")
   
   final_vector <-c(a$TE.random,
@@ -375,32 +309,36 @@ runMetaanalysis <- function(d_vector, SE_d_vector) {
 
 
 
-### Application of previously defined function to perform meta-analysis of sex related microbial species
+## Application of the described procedure in the meta-analysis of sex-related microbial species
 
 ```{r}
-dList <- mapply(function(x,y,n) {single_dataset_analyze(x,y,n)},
-                relabsList,
-                metaList,
-                n=names(relabsList),
-                SIMPLIFY = FALSE)
+#Computing Standardized Mean Differences (d), and the respective standard error
+#(SE_D) of species relative abundances between males and female for all datasets 
+SDM <- computeStandardizedMeanDifference(species_tse)  
 
+#Merging outputs of all datasets so to have a single dataframe with all the 
+#species found across the cohorts
 final_df <- Reduce(function(x, y) merge(x, y, all=TRUE), 
-                   lapply(dList, function(x) data.frame(x, rn = row.names(x))))
+                   lapply(SDM, function(x) data.frame(x, rn = row.names(x))))
 
 final_df <- final_df  %>% column_to_rownames(var="rn")
 
-#Dataframes with random effect and respective standard error for all species across all datasets
+#Subsetting from SDM dataframe only the columns we actually need to perform 
+#the meta-analysis into two separated dataframes (one for the standardized mean
+#differences (d), and one for the respective standard error (SE_D)
+
 d_matrix <- final_df %>% 
   select(contains("CohenD"))
-d_matrix <- as.data.frame(t(d_matrix))
+d_matrix <- t(d_matrix)
 se_matrix <- final_df %>% 
-  select(contains("SE_D"))
-se_matrix <- as.data.frame(t(se_matrix))
+  select(contains("SE_d"))
+se_matrix <- t(se_matrix)
 
+#Run meta-analyses
+meta_analysis_regression <- t(mapply(function(x,y) {runMetaanalysis(x,y)},
+                                                   as.data.frame(d_matrix),
+                                                   as.data.frame(se_matrix)))
 
-meta_analysis_regression <- t(as.data.frame(mapply(function(x,y) {runMetaanalysis(x,y)},
-                                                   d_matrix,
-                                                   se_matrix)))
 
 final_df <- cbind(final_df, meta_analysis_regression)
 
@@ -438,7 +376,7 @@ filter_sort <- function(df_to_sort, na_filter){
   return(df_to_sort)
 }
 
-final_df <- final_df[,c(seq(ncol(final_df) - 7, ncol(final_df)), 1:(ncol(final_df)-8))]
+final_df <- final_df %>% dplyr::select(RE:FDR_Qvalue,everything())
 final_df <- filter_sort(final_df, 4)
 ```
 
@@ -449,67 +387,3 @@ kable(final_df[,1:7], "html") %>%
     scroll_box(width = "1000px", height = "500px")
 ```
 
-
-# Reproducibility
-
-The `r Biocpkg("curatedMetagenomicData")` package `r Citep(bib[["curatedMetagenomicData"]])` was made possible thanks to:
-
-* R `r Citep(bib[["R"]])`
-* `r Biocpkg("BiocStyle")` `r Citep(bib[["BiocStyle"]])`
-* `r CRANpkg("knitr")` `r Citep(bib[["knitr"]])`
-* `r CRANpkg("RefManageR")` `r Citep(bib[["RefManageR"]])`
-* `r CRANpkg("rmarkdown")` `r Citep(bib[["rmarkdown"]])`
-* `r CRANpkg("sessioninfo")` `r Citep(bib[["sessioninfo"]])`
-* `r CRANpkg("testthat")` `r Citep(bib[["testthat"]])`
-
-This package was developed using `r BiocStyle::Biocpkg("biocthis")`.
-
-
-Code for creating the vignette
-
-```{r createVignette, eval=FALSE}
-## Create the vignette
-library("rmarkdown")
-system.time(render("analysis1.Rmd", "BiocStyle::html_document"))
-
-## Extract the R code
-library("knitr")
-knit("analysis1.Rmd", tangle = TRUE)
-```
-
-Date the vignette was generated.
-
-```{r reproduce1, echo=FALSE}
-## Date the vignette was generated
-Sys.time()
-```
-
-Wallclock time spent generating the vignette.
-
-```{r reproduce2, echo=FALSE}
-## Processing time in seconds
-totalTime <- diff(c(startTime, Sys.time()))
-round(totalTime, digits = 3)
-```
-
-`R` session information.
-
-```{r reproduce3, echo=FALSE}
-## Session info
-library("sessioninfo")
-options(width = 120)
-```
-
-
-
-# Bibliography
-
-This vignette was generated using `r Biocpkg("BiocStyle")` `r Citep(bib[["BiocStyle"]])`
-with `r CRANpkg("knitr")` `r Citep(bib[["knitr"]])` and `r CRANpkg("rmarkdown")` `r Citep(bib[["rmarkdown"]])` running behind the scenes.
-
-Citations made with `r CRANpkg("RefManageR")` `r Citep(bib[["RefManageR"]])`.
-
-```{r vignetteBiblio, results = "asis", echo = FALSE, warning = FALSE, message = FALSE}
-## Print bibliography
-PrintBibliography(bib, .opts = list(hyperlink = "to.doc", style = "html"))
-```
