--- a/vignettes/MLdatasets.Rmd
+++ b/vignettes/MLdatasets.Rmd
@@ -18,7 +18,7 @@ vignette: >
   %\VignetteIndexEntry{ML datasets from cMD}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}  
-  ---
+---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
@@ -66,7 +66,7 @@ Each of these datasets has six data types associated with it; for example:
 curatedMetagenomicData("JieZ_2017.+")
 ```
 
-Write relative abundance datasets to disk:
+# Write relative abundance datasets to disk
 
 ```{r writefiles, message=FALSE, cache=TRUE}
 for (i in seq_along(studies)){
@@ -85,3 +85,6 @@ for (i in seq_along(studies)){
 }
 ```
 
+# Direct link to files
+
+Download the .csv and .rda files directly from https://www.dropbox.com/sh/0t0nbhj9eqm3wkq/AACZIw42WA-uHjzo97bG5tE6a?dl=0
