--- a/vignettes/installation.ipynb
+++ b/vignettes/installation.ipynb
@@ -63,6 +63,8 @@
    "source": [
     "%%bash\n",
     "\n",
+    "apt-get python3-skbio python-skbio-doc\n",
+    "\n",
     "python3 -m pip install pandas \\\n",
     "  setuptools \\\n",
     "  numpy \\\n",
