--- a/vignettes/explorecirrhosis.Rmd
+++ b/vignettes/explorecirrhosis.Rmd
@@ -2,7 +2,19 @@
 title: "Exploration of the liver cirrhosis dataset"
 author: "Levi Waldron"
 date: "July 19, 2021"
-output: html_document
+output:
+  BiocStyle::html_document:
+    self_contained: yes
+    toc: true
+    toc_float: true
+    toc_depth: 2
+    code_folding: show
+date: "`r BiocStyle::doc_date()`"
+package: "`r BiocStyle::pkg_ver('curatedMetagenomicAnalyses')`"
+vignette: >
+  %\VignetteIndexEntry{Liver cirrhosis dataset}
+  %\VignetteEngine{knitr::rmarkdown}
+  %\VignetteEncoding{UTF-8}  
 ---
 
 ```{r setup, include=FALSE}
