Fix install for python3-skbio

--- a/vignettes/installation.ipynb
+++ b/vignettes/installation.ipynb
@@ -63,7 +63,7 @@
    "source": [
     "%%bash\n",
     "\n",
-    "apt-get python3-skbio python-skbio-doc\n",
+    "apt-get install python3-skbio python-skbio-doc\n",
     "\n",
     "python3 -m pip install pandas \\\n",
     "  setuptools \\\n",
