Update script and vignettes for curatedMetagenomicDataTerminal

--- a/vignettes/sexContrastMicrobiomeAnalysis.ipynb
+++ b/vignettes/sexContrastMicrobiomeAnalysis.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook contains the instructions to run a meta-analysis of sex-related contrasts in the human gut microbiome, using `curatedMetagenomicDataCLI` and a set of freely-available python programs. If not running in docker, see the [installation instructions](installation.ipynb)."
+    "This notebook contains the instructions to run a meta-analysis of sex-related contrasts in the human gut microbiome, using `curatedMetagenomicDataTerminal` and a set of freely-available python programs. If not running in docker, see the [installation instructions](installation.ipynb)."
    ]
   },
   {
@@ -27,9 +27,9 @@
    "source": [
     "As described here, we are now going to\n",
     "\n",
-    "1. create a folder called `species_abundances_from_cMD3CLI`\n",
+    "1. create a folder called `species_abundances_from_cMD3Terminal`\n",
     "2. go in that directory\n",
-    "3. download all the taxonomic profiles using `curatedMetagenomicDataCLI`\n",
+    "3. download all the taxonomic profiles using `curatedMetagenomicDataTerminal`\n",
     "\n",
     "Step 3 may take some time."
    ]
@@ -42,8 +42,8 @@
    "source": [
     "%%bash\n",
     "\n",
-    "mkdir $HOME/species_abundances_from_cMD3CLI\n",
-    "cd $HOME/species_abundances_from_cMD3CLI\n",
+    "mkdir $HOME/species_abundances_from_cMD3Terminal\n",
+    "cd $HOME/species_abundances_from_cMD3Terminal\n",
     "curatedMetagenomicData -m \"*relative_abundance\"\n",
     "cd $HOME"
    ]
@@ -59,7 +59,7 @@
     "\n",
     "## Imports section\n",
     "\n",
-    "So we must first import the basic modules to work with cMDCLI in a meta-analytical way. Note: If your `python_modules` and `python_tools` directories are in a different location, correct the paths below."
+    "So we must first import the basic modules to work with cMDTerminal in a meta-analytical way. Note: If your `python_modules` and `python_tools` directories are in a different location, correct the paths below."
    ]
   },
   {
@@ -123,7 +123,7 @@
     "## a dataset to study the Sex-contrast in the healthy, human, gut microbiome:\n",
     "\n",
     "params = {\n",
-    "    'input_folder': os.path.join(os.environ[\"HOME\"], \"species_abundances_from_cMD3CLI\"),\n",
+    "    'input_folder': os.path.join(os.environ[\"HOME\"], \"species_abundances_from_cMD3Terminal\"),\n",
     "    \"output_dataset\": os.path.join(os.environ[\"HOME\"], \"a_dataset_for_the_sex_contrast_in_gut_species.tsv\"),\n",
     "    \"min\": [\"age:16\"],\n",
     "    \"max\": [],\n",
