--- a/vignettes/Sex_metaanalysis_vignette.Rmd
+++ b/vignettes/Sex_metaanalysis_vignette.Rmd
@@ -259,7 +259,7 @@ computeStandardizedMeanDifference <- function(tse_object){
 } 
 ```
 
-Now that we have computed effect-sizes for each population, we can meta-analyze each microbial feature. In order to do this, we define a function applying the _metagen_ function from the package `BiocStyle::CRANpkg("metafor")`.
+Now that we have computed effect-sizes for each population, we can meta-analyze each microbial feature. In order to do this, we define a function applying the _metagen_ function from the package `r  BiocStyle::CRANpkg("metafor")`.
 ```{r}
 runMetaanalysis <- function(d_vector, SE_d_vector) {
   a <- meta::metagen(TE=d_vector,
